fix: alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -126,8 +126,14 @@ h1 {
     display: flex;
     box-sizing: border-box;
     width: 100%;
+    justify-content: flex-end;
+    padding-right: 2px;
 }
-
+@media (max-width: 1350px) {
+    .mission {
+        padding-right: 3px;
+    }
+}
 h2 {
     font-size: 40px;
     margin: 0;
@@ -139,12 +145,13 @@ h2 {
 
 .mission article {
     border-left: 2px solid aqua;
-    width: calc(50% );
-    max-width: calc(50% );
+    width: 50%;
+    max-width: 50% ;
     box-sizing: border-box;
     padding: 120px 48px;
     display: flex;
     flex-direction: column;
+    /* display: none; */
 }
 
 
